Changelog
=========

3.2.1 (unreleased)
------------------

- Configure LDAP credentials from JSON file.
  [lgraf]

3.2 (2013-12-15)
----------------

- Document tooltip helper: Fixed link for the icon.
  [phgross]

- Fixed load order issue when setting tagged values to omit the changeNote
  field from the IVersionable behavior.
  [lgraf]

- Increase task_principals.principal column length to 255.
  [lgraf]

- Logout overlay: use absolute url to redirect to the logout view.
  [phgross]

- OGDS Updater: Gracefully skip users outside users_base referenced in groups.
  [lgraf]

- Add destructive class to logout button in logout overlay.
  [Julian Infanger]

- Add specific byline for the PloneSite(Personal overview).
  [phgross]

- Adjusted seperator of the `grouped_by_three` formatter.
  [phgross]

- Issued inbox task: fixed listing query, to search the complete client.
  [phgross]

- Corrected message after resolving a subdossier.
  [phgross]

- Inbox overview: List only active tasks and forwardings.
  [phgross]

- Inbox overview: Only list current part of a predecessor/successor couple.
  [phgross]

- Override livesearch_reply.py to provide correct advanced search link.
  [lgraf]

- Hide paste action for template dossier and contact folder.
  [lgraf]

- Activate selction controlls for the `my documents` Tab.
  [phgross]

- Advancedsearch: Dropped reference number solution.
  [phgross]

- OGDS Listing: Display empty string for users without a name or firstname.
  [phgross]

- OGDS updater: Make check for AD user IDs more robust.
  [lgraf]

- DefaultDocumentIndexer: Store transform cache on context.file._blob, not context.file.
  (NamedFileInstances are not recreated when updating file contents)
  [lgraf]

- LDAP util: Make sure we still deal with multivaluedness for non-user
  objects (fix for bug introduced in 1daa9ba).
  [lgraf]

- LDAP import: Deal with Active Directory nested groups.
  [lgraf]
