@@ -13,4 +13,3 @@ eggs/
 parts/
 src/
 var/
-opengever/examplecontent/profiles/4teamwork-ldap/ldap_plugin.xml
